[cs-demo] Fixed CSIcon alignment in CSDTable

--- a/cs-ui-demo/src/sass/_csd-table.scss
+++ b/cs-ui-demo/src/sass/_csd-table.scss
@@ -40,6 +40,10 @@
 		&:not(:last-child) {
 			margin-bottom: 0.5rem;
 		}
+
+		.cs-icon {
+			margin-block-end: -0.25rem;
+		}
 	}
 
 	.cs-tooltip-wrapper:not(:last-child) > .csd-inline-code {
